# api_recorder

./: .gitignore  AGENTS.md  README.md  README_cn.md  environment.yml  pyproject.toml
docs/: architecture.md  architecture_cn.md  progress.md  progress_cn.md
examples/: __init__.py  fake_upstream.py
src/api_recorder/: app.py  cli.py  config.py  i18n.py  rate_limit.py  recorder.py  service.py  stats.py
tests/: support.py  test_cli.py  test_fake_upstream_integration.py  test_live_http_integration.py  test_proxy.py
